# ca3_for_submission-Jakub-Poczatek

./: CMakeLists.txt  GDD.md
engine/: engine.h  system_resources.cpp  system_resources.h
lib_aStar/: AStar.cpp  AStar.h
lib_audio/: audio.cpp  audio.h
lib_bmp_loader/: bmp.cpp  bmp.h
lib_json/: json.h
lib_tile_level_loader_rgb/: LevelSystem.cpp  LevelSystem.h
res/json/: audio.json  enemies.json  general.json  pickups.json  player.json
src/: JsonData.h  game.h  main.cpp
src/components/: cmp_actor_movement.cpp  cmp_bullet.cpp  cmp_enemy_aStar.cpp  cmp_enemy_aStar.h  cmp_enemy_ai.h  cmp_enemy_ai_targeted.cpp  cmp_enemy_ai_targeted.h  cmp_enemy_turret.cpp  cmp_enemy_turret.h  cmp_entity_health.cpp  cmp_entity_health.h  cmp_health_pickup.cpp  cmp_health_pickup.h  cmp_hurt_player.cpp  cmp_key.cpp  cmp_key.h  cmp_physics.cpp  cmp_pickup.cpp  cmp_pickup.h  cmp_player_physics.cpp  cmp_player_physics.h  cmp_text.cpp  cmp_text.h  temp.h
src/scenes/: scene_level1.cpp  scene_level2.cpp  scene_level3.cpp  scene_menu.cpp  scene_test.cpp  scene_test.h
